# b2ai-standards-registry

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  about.yaml  add_b2ai_usage.py  add_default_topic.py  add_second_refs.py  fix_applications.py  index.html  mkdocs.yml  project.Makefile  purpose_detail_report.md  pyproject.toml  sitemap.xml  smaps_standards.txt  update_ai_applications.py
.github/: CODEOWNERS
BiomedicalStandard/: index.html
Boolean/: index.html
DataGeneratingProject/: index.html
DataSet/: index.html
DataStandard/: index.html
DataStandardOrTool/: index.html
DataStandardOrToolContainer/: index.html
DataSubstrate/: index.html
DataSubstrateContainer/: index.html
DataTopic/: index.html
DataTopicContainer/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
EdamIdentifier/: index.html
Float/: index.html
Integer/: index.html
MeshIdentifier/: index.html
ModelRepository/: index.html
NamedThing/: index.html
NcitIdentifier/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
OntologyOrVocabulary/: index.html
Organization/: index.html
OrganizationContainer/: index.html
ReferenceDataOrDataset/: index.html
ReferenceImplementation/: index.html
Registry/: index.html
RorIdentifier/: index.html
SoftwareOrTool/: index.html
StandardsCollectionTag/: index.html
String/: index.html
Time/: index.html
TrainingProgram/: index.html
Uri/: index.html
Uriorcurie/: index.html
UseCase/: index.html
UseCaseCategory/: index.html
UseCaseContainer/: index.html
WikidataIdentifier/: index.html
about/: index.html
ai-access/: index.html
alternative_standards_and_tools/: index.html
categories/: index.html
collection/: index.html
concerns_data_topic/: index.html
curation/: index.html
data/: DataStandardOrTool.html  Organization.html  UseCase.html
data_standardortools_collection/: index.html
data_substrates/: index.html
data_substrates_collection/: index.html
data_topics/: index.html
data_topics_collection/: index.html
description/: index.html
docs/: BiomedicalStandard.md  Boolean.md  DataGeneratingProject.md  DataSet.markdown  DataStandard.md  DataStandardOrTool.markdown  DataStandardOrTool.md  DataStandardOrToolContainer.md  DataSubstrate.markdown  DataSubstrate.md  DataSubstrateContainer.md  DataTopic.markdown  DataTopic.md  DataTopicContainer.md  Date.md  DateOrDatetime.md  Datetime.md  Decimal.md  Double.md  EdamIdentifier.md  Float.md  Integer.md  MeshIdentifier.md  ModelRepository.md  NamedThing.md  NcitIdentifier.md  Ncname.md  Nodeidentifier.md  Objectidentifier.md  OntologyOrVocabulary.md  Organization.markdown  Organization.md  OrganizationContainer.md  ReferenceDataOrDataset.md  ReferenceImplementation.md  Registry.md  RorIdentifier.md  SoftwareOrTool.md  StandardsCollectionTag.md  String.md  (+65 more)
edam_id/: index.html
enables/: index.html
file_extensions/: index.html
files_for_tech_support/: columnDefs.pickle  dst_denormalized.csv  dst_denormalized_df.pickle
formal_specification/: index.html
(+541 files in other folders)
