[tool.poetry]
name = "b2ai-standards-registry"
version = "0.1.2"
description = "Bridge2AI Standards Registry and Use Case Catalog, including validation functions."
authors = ["caufieldjh <j.harry.caufield@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "b2ai-standards-registry", from="src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
linkml = "^1.4.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
linkml-renderer = ">=0.3.1"
more-itertools = "^10.6.0"
click = "^8.1.3"
mkdocs-table-reader-plugin = "^2.0"
pandas = "^2.2.3"
synapseclient = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
