[project]
name = "b2ai-standards-registry"
version = "0.1.2"
description = "Bridge2AI Standards Registry and Use Case Catalog, including validation functions."
authors = [
	{name = "caufieldjh", email = "j.harry.caufield@gmail.com"},
	{name = "jennifer-bowser", email = "jduffbowser@gmail.com"},
	{name = "korikuzma", email = "kori.kuzma@nationwidechildrens.org"},
	{name = "katiestahl", email = "kathryn.stahl@nationwidechildrens.org"},
	{name = "Krt-11", email = "krutin.shukla@nationwidechildrens.org"},
	{name = "jaeddy"},
	{name = "monicacecilia"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9, <3.13"
dependencies = [
	"linkml>=1.4.5",
	"mkdocs-material>=8.2.8",
	"mkdocs-mermaid2-plugin>=0.6.0",
	"linkml-renderer>=0.3.1",
	"more-itertools>=10.6.0",
	"click>=8.1.3",
	"mkdocs-table-reader-plugin>=2.0",
	"pandas>=2.2.3"
]

[project.optional-dependencies]
synapse = ["synapseclient>=4.7.0"]

[tool.poetry]
packages = [
	{include = "b2ai-standards-registry", from="src"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
