[tool.poetry]
name = "b2ai-standards-registry"
version = "0.1.2"
description = "Bridge2AI Standards Registry and Use Case Catalog, including validation functions."
authors = [
	"caufieldjh <j.harry.caufield@gmail.com>",
	"jennifer-bowser <jduffbowser@gmail.com>",
	"korikuzma <kori.kuzma@nationwidechildrens.org>",
	"katiestahl <kathryn.stahl@nationwidechildrens.org>",
	"Krt-11 <krutin.shukla@nationwidechildrens.org>",
	"monicacecilia <monica.munoz-torres@cuanschutz.edu>",
	"Sigfried <sigfried@jhu.edu>",
	"jaeddy"
]
license = "MIT"
readme = "README.md"

packages = [
	{include = "b2ai-standards-registry", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
linkml = ">=1.4.5"
mkdocs-material = ">=8.2.8"
mkdocs-mermaid2-plugin = ">=0.6.0"
linkml-renderer = ">=0.3.1"
more-itertools = ">=10.6.0"
click = ">=8.1.3"
mkdocs-table-reader-plugin = ">=2.0"
pandas = ">=2.2.3"
synapseclient = "^4.9.0"
"ruamel.yaml" = {version = ">=0.18.10,<0.19.0", optional = true}

[tool.poetry.scripts]
b2ai_update_synapse = "scripts.analyze_and_update_synapse_tables:analyze_and_update"

[tool.poetry.extras]
synapse = ["synapseclient"]
format_yaml = ["ruamel.yaml"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
